# State-Capacity

./: AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke-test.yml
data/derived/: 0_3Quota Intensity.csv
data/input/: analysis_panel_clean_1990_2024.csv  csv-2.csv  csv.csv  export_table.csv  export_table.xls
data/interim/: idea_country_match_audit.csv  idea_quota_country_classification.csv
data/manual/: idea_country_manual_match_needed.csv  quota_country_todo.csv  quota_events_manual.csv  quota_events_template.csv
docs/: codex_tasks.md  coding_protocol.md  network_access_report.md  quota_strength_step1_build_report.md  quota_strength_step1_data_dictionary.md  source_collection_guide.md
scripts/: run_full_build.sh  run_offline_smoke.sh
src/gender_quota_panel/: __init__.py  build_panel.py  schema.py
tests/: test_schema_and_offline.py
